tech: improvement data response and swag doc with success and failures result
