# api/controllers/auth_controller.go
@@ -30,29 +30,27 @@ func NewAuthController(authService services.AuthService, userService services.Us
 //	@Param 			data body dto.Register true "Post"
 //	@Router			/register [post]
 //	@Success		200  {object}  response.Response{data=dto.RegisterResponse}  "ok"
+//	@Failure		400  {object}  response.Response{data=[]response.ValidationErrors}  "bad request"
 func (c AuthController) Register(ctx *gin.Context) {
 	register := new(dto.Register)
 	if err := ctx.ShouldBind(register); err != nil {
-		response.Response{
-			Code:    http.StatusBadRequest,
-			Message: err,
-		}.JSON(ctx)
+		response.BadRequest{Req: dto.Register{}, Message: err}.JSON(ctx)
 		return
 	}
 
 	_, err := c.authService.Register(register.Username, register.Password, register.Email)
 	if err != nil {
-		response.Response{
-			Code:    http.StatusBadRequest,
-			Message: err,
-		}.JSON(ctx)
+		response.BadRequest{Message: err}.JSON(ctx)
 		return
 	}
 
-	ctx.JSON(http.StatusCreated, dto.RegisterResponse{
-		Username: register.Username,
-		Email:    register.Email,
-	})
+	response.Response{
+		Code: http.StatusCreated,
+		Data: dto.RegisterResponse{
+			Username: register.Username,
+			Email:    register.Email,
+		},
+	}.JSON(ctx)
 }
 
 // Login godoc
@@ -65,22 +63,17 @@ func (c AuthController) Register(ctx *gin.Context) {
 //	@Param 			data body dto.Login true "Post"
 //	@Router			/login [post]
 //	@Success		200  {object}  response.Response{data=dto.LoginResponse}  "ok"
+//	@Failure		400  {object}  response.Response{data=[]response.ValidationErrors}  "bad request"
 func (c AuthController) Login(ctx *gin.Context) {
 	login := new(dto.Login)
 	if err := ctx.ShouldBind(login); err != nil {
-		response.Response{
-			Code:    http.StatusBadRequest,
-			Message: err,
-		}.JSON(ctx)
+		response.BadRequest{Req: dto.Login{}, Message: err}.JSON(ctx)
 		return
 	}
 
 	token, err := c.authService.Login(login)
 	if err != nil {
-		response.Response{
-			Code:    http.StatusBadRequest,
-			Message: err,
-		}.JSON(ctx)
+		response.BadRequest{Message: err}.JSON(ctx)
 		return
 	}
 
