# docs/swagger.yaml
@@ -14,6 +14,15 @@ definitions:
       access:
         type: string
     type: object
+  dto.Pagination:
+    properties:
+      current:
+        type: integer
+      page_size:
+        type: integer
+      total:
+        type: integer
+    type: object
   dto.PostRequest:
     properties:
       body:
@@ -23,13 +32,6 @@ definitions:
     required:
     - body
     - title
-    type: object
-  dto.PostResponse:
-    properties:
-      body:
-        type: string
-      title:
-        type: string
     type: object
   dto.PostUpdateRequest:
     properties:
@@ -58,10 +60,106 @@ definitions:
       username:
         type: string
     type: object
+  gorm.DeletedAt:
+    properties:
+      time:
+        type: string
+      valid:
+        description: Valid is true if Time is not NULL
+        type: boolean
+    type: object
+  models.Post:
+    properties:
+      body:
+        type: string
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      title:
+        type: string
+      updatedAt:
+        type: string
+      user:
+        $ref: '#/definitions/models.User'
+      userID:
+        type: integer
+    required:
+    - body
+    - title
+    type: object
+  models.PostPaginationResult:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/models.Post'
+        type: array
+      pagination:
+        $ref: '#/definitions/dto.Pagination'
+    type: object
+  models.Profile:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      gender:
+        type: string
+      id:
+        type: integer
+      phoneNumber:
+        type: string
+      updatedAt:
+        type: string
+      userID:
+        type: integer
+    type: object
+  models.User:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      email:
+        type: string
+      id:
+        type: integer
+      posts:
+        items:
+          $ref: '#/definitions/models.Post'
+        type: array
+      profile:
+        $ref: '#/definitions/models.Profile'
+      updatedAt:
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - username
+    type: object
+  models.UserPaginationResult:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/models.User'
+        type: array
+      pagination:
+        $ref: '#/definitions/dto.Pagination'
+    type: object
   response.Response:
     properties:
       data: {}
       message: {}
+    type: object
+  response.ValidationError:
+    properties:
+      field:
+        type: string
+      message:
+        type: string
     type: object
 info:
   contact: {}
@@ -90,6 +188,19 @@ paths:
                 data:
                   $ref: '#/definitions/dto.LoginResponse'
               type: object
+        "400":
+          description: bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    items:
+                      $ref: '#/definitions/response.ValidationError'
+                    type: array
+                  type: array
+              type: object
       summary: Login a User
       tags:
       - auth
@@ -100,7 +211,29 @@ paths:
       description: get list of posts
       produces:
       - application/json
-      responses: {}
+      responses:
+        "200":
+          description: ok
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.PostPaginationResult'
+              type: object
+        "400":
+          description: bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    items:
+                      $ref: '#/definitions/response.ValidationError'
+                    type: array
+                  type: array
+              type: object
       summary: List of posts
       tags:
       - post
@@ -117,7 +250,41 @@ paths:
           $ref: '#/definitions/dto.PostRequest'
       produces:
       - application/json
-      responses: {}
+      responses:
+        "201":
+          description: created
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.Post'
+              type: object
+        "400":
+          description: bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    items:
+                      $ref: '#/definitions/response.ValidationError'
+                    type: array
+                  type: array
+              type: object
+        "401":
+          description: unauthorized
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: forbidden
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: not found
+          schema:
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: Create a post
@@ -136,7 +303,21 @@ paths:
         type: string
       produces:
       - application/json
-      responses: {}
+      responses:
+        "204":
+          description: no content
+        "401":
+          description: unauthorized
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: forbidden
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: not found
+          schema:
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: Delete a post
@@ -154,7 +335,20 @@ paths:
         type: string
       produces:
       - application/json
-      responses: {}
+      responses:
+        "200":
+          description: ok
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.Post'
+              type: object
+        "404":
+          description: not found
+          schema:
+            $ref: '#/definitions/response.Response'
       summary: Detail a post
       tags:
       - post
@@ -184,8 +378,33 @@ paths:
             - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/dto.PostResponse'
+                  $ref: '#/definitions/models.Post'
               type: object
+        "400":
+          description: bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    items:
+                      $ref: '#/definitions/response.ValidationError'
+                    type: array
+                  type: array
+              type: object
+        "401":
+          description: unauthorized
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: forbidden
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: not found
+          schema:
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: Update a post
@@ -215,6 +434,19 @@ paths:
                 data:
                   $ref: '#/definitions/dto.RegisterResponse'
               type: object
+        "400":
+          description: bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    items:
+                      $ref: '#/definitions/response.ValidationError'
+                    type: array
+                  type: array
+              type: object
       summary: Register a new User
       tags:
       - auth
@@ -225,7 +457,29 @@ paths:
       description: get list several users
       produces:
       - application/json
-      responses: {}
+      responses:
+        "200":
+          description: ok
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.UserPaginationResult'
+              type: object
+        "400":
+          description: bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    items:
+                      $ref: '#/definitions/response.ValidationError'
+                    type: array
+                  type: array
+              type: object
       summary: List several users
       tags:
       - user
@@ -242,7 +496,21 @@ paths:
         type: string
       produces:
       - application/json
-      responses: {}
+      responses:
+        "204":
+          description: no content
+        "401":
+          description: unauthorized
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: forbidden
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: not found
+          schema:
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: Delete a User
@@ -260,7 +528,20 @@ paths:
         type: string
       produces:
       - application/json
-      responses: {}
+      responses:
+        "200":
+          description: ok
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.User'
+              type: object
+        "404":
+          description: not found
+          schema:
+            $ref: '#/definitions/response.Response'
       summary: Get a User
       tags:
       - user
